Added some more ignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ course-notes/mapserver/mapserver.log
 course-notes/mapserver/mapserver.pdf
 course-notes/mapserver/mapserver.tex
 course-notes/mapserver/texput.log
+course-notes/git/t2t/LinfinitiGitTutorial.aux
+course-notes/git/t2t/LinfinitiGitTutorial.log
+course-notes/git/t2t/LinfinitiGitTutorial.out
+course-notes/git/t2t/LinfinitiGitTutorial.tex
+course-notes/git/t2t/LinfinitiGitTutorial.toc
