Updated Git docs a little more

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ course-notes/git/t2t/LinfinitiGitTutorial.log
 course-notes/git/t2t/LinfinitiGitTutorial.out
 course-notes/git/t2t/LinfinitiGitTutorial.tex
 course-notes/git/t2t/LinfinitiGitTutorial.toc
+*.swp
