Initial version of OL docs

--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,9 @@
 *.*~
 course-notes/django/django_training.html
 course-notes/django/django_training.pdf
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.aux
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.log
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.out
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.pdf
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.tex
-course-notes/mapserver/t2t/LinfinitiMapserverTutorial.toc
-course-notes/git/t2t/LinfinitiGitTutorial.aux
-course-notes/git/t2t/LinfinitiGitTutorial.log
-course-notes/git/t2t/LinfinitiGitTutorial.out
-course-notes/git/t2t/LinfinitiGitTutorial.tex
-course-notes/git/t2t/LinfinitiGitTutorial.toc
+*.aux
+*.log
+*.out
+*.tex
+*.toc
 *.swp
